<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App -->
    <string name="app_name">   Project Homeless Connect</string>
    <string name="action_settings">Settings</string>

    <!-- Splash Page -->
    <string name="title_activity_splash">SplashActivity</string>
    <string name="splash_title">Project Homeless\n Connect SF</string>

    <!-- Login -->
    <string name="title_activity_login">Login</string>
    <string name="login_title">"Welcome!\nPlease Login"</string>
    <string name="login_email_label">Email</string>
    <string name="login_password_label">Password</string>
    <string name="login_button_label">Login</string>


    <!-- Logout -->
    <string name="logout_title">Logout from PHC</string>
    <string name="logout_yes">Logout</string>
    <string name="logout_cancel">Cancel</string>

    <!-- Security Key AlertDialog -->
    <string name="title_security">Security Key</string>
    <string name="title_error">Error</string>
    <string name="prompt_security">Please enter the security key.</string>
    <string name="text_incorrect_security">The security key you have entered is incorrect. Please try again.</string>
    <string name="button_submit">Submit</string>
    <string name="button_retry">Retry</string>

    <!-- Sidebars -->
    <string name="sidebar_selection">Selection</string>
    <string name="sidebar_search">Search</string>
    <string name="sidebar_personal_info">Personal Info</string>
    <string name="sidebar_event_info">Event Info</string>
    <string name="sidebar_services_info">Services Info</string>
    <string name="sidebar_scan_code">Scan Code</string>
    <string name="sidebar_confirm">Confirm</string>

    <string name="sidebar_registration"><u>Registration</u></string>
    <string-array name="checkin_sidebar">
        <item>@string/sidebar_selection</item>
        <item>@string/sidebar_search</item>
        <item>@string/sidebar_personal_info</item>
        <item>@string/sidebar_event_info</item>
        <item>@string/sidebar_services_info</item>
        <item>@string/sidebar_scan_code</item>
        <item>@string/sidebar_confirm</item>
    </string-array>

    <string name="sidebar_services"><u>Services</u></string>
    <string-array name="services_sidebar">
        <item>@string/sidebar_scan_code</item>
        <item>@string/sidebar_confirm</item>
    </string-array>

    <!-- Search -->
    <string name="search_prompt">Please try to search for your client here:</string>
    <string name="search_results_title">Results</string>
    <string name="request_url">http://phc-test.herokuapp.com</string>
    <string name="search_again">Try searching again</string>
    <string name="search_register_as_new">Register client as new user</string>
    <string name="search_no_results">No Results Found.</string>
    <string name="search_next_results">Next 20 Results</string>


    <!-- Splash Page -->
    <string name="button_checkin">Check-In</string>
    <string name="button_services">Services</string>
    <string name="button_checkout">Check-Out</string>
    <string name="title_activity_register">Client Check-In</string>
    <string name="title_activity_services">Manage Services</string>
    <string name="title_activity_exit">Check-Out Form</string>
    <string name="button_search_submit">Search</string>

    <!-- Personal Info -->
    <string name="personal_info_new">Please enter the following information about the
        client: </string>
    <string name="personal_info_edit">Please edit the following client information as
        needed: </string>
    <string name="prompt_first">First Name</string>
    <string name="prompt_last">Last Name</string>
    <string name="prompt_ssn">SSN</string>
    <string name="prompt_ssn_1">XXX</string>
    <string name="prompt_ssn_2">XX</string>
    <string name="prompt_ssn_3">XXXX</string>
    <string name="prompt_birthday">DOB</string>
    <string name="prompt_birthday_month">MM</string>
    <string name="prompt_birthday_day">DD</string>
    <string name="prompt_birthday_year">YYYY</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_gender">Gender Identity...</string>
    <string name="prompt_ethnicity">Ethnicity...</string>
    <string name="prompt_language">Primary Language...</string>
    <string name="prompt_military">Served in the military?</string>
    <string name="prompt_foster">Been in Foster Care?</string>
    <string name="prompt_glbt">Identify as GLBT?</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Transgender</item>
    </string-array>

    <string-array name="ethnicity_array">
        <item>African American</item>
        <item>Latino</item>
        <item>Asian/Pacific Islander</item>
        <item>Caucasian</item>
        <item>Native American</item>
        <item>Other</item>
    </string-array>
    <string-array name="language_array">
        <item>English</item>
        <item>Spanish</item>
        <item>Cantonese/Mandarin</item>
        <item>Vietnamese</item>
        <item>Russian</item>
        <item>Other</item>
    </string-array>

    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This e-mail is invalid</string>
    <string name="error_invalid_ssn">This SSN is invalid</string>
    <string name="error_invalid_birthday">This date of birth is invalid</string>
    <string name="error_invalid_phone_number">This phone number is invalid</string>
    <string name="action_continue">Continue</string>

    <!-- Event Info -->
    <string name="prompt_neighborhood">Neighborhood of residence</string>
    <string name="prompt_housing">Housing Status</string>
    <string name="prompt_healthcare">Where do you go for healthcare?</string>
    <string name="prompt_homeless">How long have you been homeless?</string>


    <string-array name="neighborhood_array">
        <item>Bayview/HP</item>
        <item>SOMA</item>
        <item>GGPark/Haight</item>
        <item>Tenderloin</item>
        <item>Mission</item>
        <item>Other</item>
    </string-array>

    <string-array name="housing_array">
        <item>Housed</item>
        <item>Homeless</item>
        <item>Other</item>
    </string-array>

    <string-array name="healthcare_array">
        <item>Hospital/Emergency Room</item>
        <item>Urgent Care</item>
        <item>Clinic / Primary Care Doctor</item>
        <item>VA</item>
        <item>Does not go for care</item>
        <item>Other</item>
    </string-array>

    <string-array name="homeless_array">
        <item>Less than 3 months</item>
        <item>3-6 months </item>
        <item>6-9 months </item>
        <item>9-12 months </item>
        <item>1-3 years </item>
        <item>3-5 years </item>
        <item>5-7 years </item>
        <item>7-10 years </item>
        <item>10-15 years </item>
        <item>15 years and more</item>
    </string-array>




    <!-- Services Selection -->
    <string name="prompt_services">Which services will the client be using today?</string>
    <string name="action_submit">Submit</string>

    <!-- Service Scan Page -->
    <string name="button_start_scan">Click to scan</string>
    <string name="button_confirm_scan">Confirm</string>
    <string name="button_retry_scan">Retry</string>

    <!-- Toast messages -->
    <string name="toast_scan_success">Result successfully recorded</string>
    <string name="toast_scan_failure">No result recorded, please try again</string>
    <string name="toast_invalid_input">Invalid entry, code must contain numbers only</string>
    <string name="toast_retry_services">Retrieving data, please try again in a few
        seconds.</string>

    <!-- Checkin Scan Page -->
    <string name="prompt_scan">Please scan a QR code</string>
    <string name="submit_form">Submit Form</string>
    <string name="register_error">Error registering user. Please ask for assistance."</string>

    <!-- Selection Page -->
    <string name="selection_prompt">Is this the client\'s first time at a PHC event?</string>
    <string name="selection_yes">Yes</string>
    <string name="selection_no_unsure">No/Unsure</string>
    <string name="text_success">Success!</string>
    <string name="button_register_another">Check in another client</string>

    <!-- Service Activity -->
    <string name="button_change_service">Change Service</string>
    <string name="text_welcome_service">Welcome! Your service is: </string>
    <string name="prompt_enter_code">Enter a code here: </string>
    <string name="prompt_scan_code">Or, scan a QR code: </string>
    <string name="text_input_confirmation">The code you entered was: </string>
    <string name="text_scan_confirmation">The scan result was: </string>
    <string name="text_drop_in">The client is a drop-in.</string>
    <string name="text_already_received">The client has already received this service.</string>
    <string name="text_drop_in_and_already_received">The client is a drop-in who has
        already received this service. </string>
    <string name="services_code_not_recognized">Code not recognized</string>
    <string name="services_code_not_recognized_description">Either the code has been entered
        incorrectly, or the client has not checked in."</string>

    <!-- Checkout Activity -->
    <string name="button_qr_scanner">Scan QR Code and Submit</string>
    <string name="prompt_experience">Rate your experience</string>
    <string name="prompt_priority_services"> Which of your applied services do you still need?</string>
    <string name="prompt_comments">Other comments? </string>
    <string name="button_checkout_another">Checkout another client</string>
    <string name="checkout_experience_0">0</string>
    <string name="checkout_experience_1">1</string>
    <string name="checkout_experience_2">2</string>
    <string name="checkout_experience_3">3</string>
    <string name="checkout_experience_4">4</string>
    <string name="checkout_experience_5">5</string>
    <string name="checkout_confirmation_comments">Your comments: </string>
    <string name="checkout_confirmation_services"> Requested services: </string>
    <string name="checkout_confirmation_experience">Your experience: </string>


</resources>
