<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:layout_marginTop="@dimen/fragment_top_margin">

    <TextView
        android:id="@+id/search_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_prompt"
        android:textSize="@dimen/text_size"
        android:layout_marginBottom="@dimen/prompt_bottom_margin"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_first"
        android:inputType="textCapWords"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_last"
        android:inputType="textCapWords"
        android:maxLines="1"/>

    <Button
        android:id="@+id/button_submit_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_search_submit"
        />

</LinearLayout>
