<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    tools:context="phc.android.ServiceActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enter_code"
        android:text="@string/prompt_enter_code"
        android:textSize="20sp"
        android:paddingBottom="10dp"
        android:paddingTop="20dp"/>

    <EditText
        android:id="@+id/code_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:textSize="20sp"
        android:maxLength="10"
        android:layout_marginBottom="10dp"
        android:singleLine="true"/>

    <Button
        android:id="@+id/submit_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_submit"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scan_code"
        android:textSize="20sp"
        android:paddingTop="30dp"
        android:paddingBottom="10dp"
        android:text="@string/prompt_scan_code"/>

    <Button
        android:id="@+id/start_scan"
        android:text="@string/button_start_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"/>

</LinearLayout>
